--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -46,7 +46,9 @@ layout: default
 
       <section class="page__content" itemprop="text">
         {{ content }}
-
+        {% if page.excerpt and page.paperurl %}
+          <p style="font-size: smaller">Abstract:<br />{{ page.excerpt }}</p>
+        {% endif %}
         {% if page.citation and page.paperurl and page.slidesurl %}
           <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}">Download Paper</a> | <a href="{{ page.slidesurl }}">Download Slides</a></p>
         {% elsif page.citation and page.paperurl %}
